Fix overflow-x scrolling

--- a/resources/src/main.styl
+++ b/resources/src/main.styl
@@ -16,6 +16,7 @@
 @import "partials/media.styl"
 
 body
+    overflow-x hidden
   &.page-template-page-history
     background url("images/bg-pattern.jpg") no-repeat fixed top #070e16 !important
     min-width 0px !important
